fix popup not showing when removing item and quantity control in cart, correct display header based on active filter on catalog, implement lazy loading for img

--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -403,6 +403,10 @@ ul{
     .summary-item {
         flex: 1 1 calc(50% - 10px);
     }
+
+    .apply-button{
+        width: 30%;
+    }
 }
 
 /* Desktop Styles */
